table_3/results/Cache2k-NW_pre_nullaway_wpi.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-pre/src/src/main/java/org/cache2k/config/Cache2kConfig.java:107: error: [NullAway] @NonNull field loaderExecutor not initialized
  private  CustomizationSupplier<? extends Executor> loaderExecutor;
                                                     ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-pre/src/src/main/java/org/cache2k/config/Cache2kConfig.java:108: error: [NullAway] @NonNull field refreshExecutor not initialized
  private  CustomizationSupplier<? extends Executor> refreshExecutor;
                                                     ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-pre/src/src/main/java/org/cache2k/config/Cache2kConfig.java:109: error: [NullAway] @NonNull field asyncListenerExecutor not initialized
  private  CustomizationSupplier<? extends Executor> asyncListenerExecutor;
                                                     ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-pre/src/src/main/java/org/cache2k/config/Cache2kConfig.java:110: error: [NullAway] @NonNull field executor not initialized
  private  CustomizationSupplier<? extends Executor> executor;
                                                     ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-pre/src/src/main/java/org/cache2k/config/Cache2kConfig.java:111: error: [NullAway] @NonNull field expiryPolicy not initialized
  private  CustomizationSupplier<? extends ExpiryPolicy<K, V>> expiryPolicy;
                                                               ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-pre/src/src/main/java/org/cache2k/config/Cache2kConfig.java:113: error: [NullAway] @NonNull field loader not initialized
  private  CustomizationSupplier<? extends CacheLoader<K, V>> loader;
                                                              ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-pre/src/src/main/java/org/cache2k/config/CacheTypeCapture.java:103: error: [NullAway] method returns @Nullable, but superclass method org.cache2k.config.CacheType.getComponentType() returns @NonNull
    public  CacheType<?> getComponentType() {
                         ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
7 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 634ms
7
